# tt-edsl

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/eltwise_sfpu/: CMakeLists.txt
examples/hello_world/: CMakeLists.txt  hello_world.cpp
examples/loopback/: loopback_dram_copy.cpp
examples/reader_unary/: CMakeLists.txt  reader_unary.cpp
examples/test/: CMakeLists.txt  test.cpp
examples/writer_unary/: loopback_dram_copy.cpp
include/: CMakeLists.txt  api.hpp  cache.hpp  dsl.hpp  recursive_wrapper.hpp  tt.hpp  variant.hpp
